Move description to main part of config

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="header-bar">
   <h1>{{ config.title }}</h1>
-  {% if config.extra.description %}
+  {% if config.description %}
   <h2>simple whitespace theme</h2>
   {% endif %}
   <br />
