--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -117,18 +117,11 @@
     /**
      * Pagination   **********************************************************
      */
-    .pagination{
-    max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit} * 2));
-    text-align: center;
-    width: 100%;
-    position: fixed;
-    bottom: 50px;
+    .prev {
+        float: left;
     }
-    .paginationicon {
-    font-size: 50px;
-    a {
-    color: $theme-color;
-        }
+    .next {
+        float: right;
     }
     /**
      * Page content   **********************************************************
