--- a/templates/tags/single.html
+++ b/templates/tags/single.html
@@ -32,7 +32,7 @@
         
         {% if paginator is defined %}
         <footer class="page-footer">
-            <nav class="pagination">
+            <nav>
                 {% if paginator.previous %}
                     <a class="prev" href="{{ paginator.previous }}">← Previous</a>
                 {% endif %}
