Truncate page navigation links when they're too long

--- a/templates/page.html
+++ b/templates/page.html
@@ -37,14 +37,14 @@
       <span class="previous">
         <a href="{{ page.higher.permalink | safe }}">
           <span class="button__icon">←</span>&nbsp;
-          <span class="button__text">{{ page.higher.title }}</span>
+          <span class="button__text">{{ page.higher.title | truncate(length=35, end="...")}}</span>
         </a>
       </span>
       {% endif %}
       {% if page.lower %}
       <span class="next">
         <a href="{{ page.lower.permalink | safe }}">
-          <span class="button__text">{{ page.lower.title }}</span>&nbsp;
+          <span class="button__text">{{ page.lower.title | truncate(length=35, end="...")}}</span>&nbsp;
           <span class="button__icon">→</span>
         </a>
       </span>
