--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -170,22 +170,32 @@
             text-decoration: none;
         }
     }
+    h1 {
+    font-size: 42px;
+    @include media-query($on-laptop) {
+    font-size: 28px;
+    line-height: 2em;
+        }
+    }
     h2 {
     font-size: 42px;
     @include media-query($on-laptop) {
     font-size: 28px;
+    line-height: 1.5em;
             }
         }
     h3 {
     font-size: 30px;
     @include media-query($on-laptop) {
     font-size: 22px;
+    line-height: 1em;
             }
         }
     h4 {
     font-size: 20px;
     @include media-query($on-laptop) {
     font-size: 18px;
+    line-height: 1em;
             }
         }
     img {
