Use configured site description

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="header-bar">
   <h1>{{ config.title }}</h1>
   {% if config.description %}
-  <h2>simple whitespace theme</h2>
+  <h2>{{ config.description }}</h2>
   {% endif %}
   <br />
   <hr>
