--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -200,6 +200,9 @@
     }
     img {
         max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         }
     }
     .post-meta {
