Improve formatting and performance of portfolio page

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -253,7 +253,7 @@
     }
     .project {
     width: 33.33%;
-    height: 250px;
+    height: 180px;
     float: left;
     vertical-align: middle;
     box-sizing: border-box;
@@ -261,19 +261,21 @@
     }
     .thumbnail{
     width: 100%;
-    height: 250px;
+    height: 100%;
     overflow: hidden;
+    display: flex;
+    align-items: center; /* vertical */
+    justify-content: center; /* horizontal */
     }
     .thumbnail img{
     width: 100%;
-    height: auto;
     position: relative;
+    object-fit: cover;
     }
     .thumbnail a{
     float: left;
     position: relative;
     width: 100%;
-    height: 230px;
     }
     .thumbnail a span {
     display: none;
