--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,19 +35,6 @@
               }
       color: $theme-color;
           }
-      @include media-query($on-palm) {
-      position: fixed;
-      top: 0px;
-      left: 10px;
-      text-align: right;
-      &:hover .trigger {
-      display: block;
-      padding-bottom: 5px;
-              }
-      .page-link-title {
-      display: line;
-              }
-          }
       }
     .site-nav {
     float: right;
@@ -57,19 +44,6 @@
             // Gaps between nav items, but not on the first one
     &:not(:first-child) {
     margin-left: 10px;
-            }
-        }
-    @include media-query($on-palm) {
-    position: fixed;
-    top: 0px;
-    right: 10px;
-    text-align: right;
-    &:hover .trigger {
-    display: block;
-    padding-bottom: 5px;
-            }
-    .page-link {
-    display: line;
             }
         }
     }
@@ -84,14 +58,15 @@
         width: 100%;
         text-align: center;
         padding-top: 25px;
-        line-height: 3em;
         z-index: 25;
         h1{
             color: $theme-color;
             font-size:75px;
+            line-height: 1em;
         }
         h2{
             font-size:25px;
+            line-height: 1em;
         }
     }
     
@@ -156,10 +131,7 @@
     .post-title {
     font-size: 42px;
     letter-spacing: -1px;
-    line-height: 1;
-    @include media-query($on-laptop) {
-    font-size: 36px;
-        }
+    line-height: 1em;
     }
     .post-content {
     a {
@@ -173,30 +145,26 @@
     h1 {
     font-size: 42px;
     line-height: 1em;
-    @include media-query($on-laptop) {
-    font-size: 28px;
-        }
     }
     h2 {
-    font-size: 42px;
+    font-size: 36px;
     line-height: 1em;
-    @include media-query($on-laptop) {
-    font-size: 28px;
-        }
     }
     h3 {
     font-size: 30px;
     line-height: 1em; 
-    @include media-query($on-laptop) {
-    font-size: 22px;
-        }
     }
     h4 {
     font-size: 20px;
     line-height: 1em;
-    @include media-query($on-laptop) {
+    }
+    h5 {
     font-size: 18px;
-        }
+    line-height: 1em;
+    }
+    h6 {
+    font-size: 16px;
+    line-height: 1em;
     }
     img {
         max-width: 100%;
@@ -226,17 +194,6 @@
             }
         }
     }
-    
-    /** Poem formatting ********************************************/
-    .poem-title {
-    font-size: 24px;
-    letter-spacing: -1px;
-    line-height: 1;
-    @include media-query($on-laptop) {
-    font-size: 16px;
-        }
-    }
-    
     
     /** 
      * Portfolio grid **********************************************************
