--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -115,9 +115,17 @@
         }
     }
     .contacticon {
-    font-size: 60px;
-    display:block;
-    margin: 10px;
+        display: table;
+        margin: auto;
+        svg {
+            width: 60px;
+            display: block;
+            float: left;
+            padding-left: 5px;
+            padding-right: 5px;
+            fill: $theme-color;
+        }
+        
     }
     .center{
     text-align: center;
@@ -289,3 +297,4 @@
     vertical-align: middle;
     font-size: $caption_font_size;
     }
+
