--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,5 @@
 @import
         "main",
         "_base",
-        "_layout",
-        // importing core styling file
-        './fontawesome/fontawesome.scss',
-        './fontawesome/solid.scss',
-        './fontawesome/brands.scss'
+        "_layout"
 ;
