--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,225 +1,465 @@
-/**
- * Reset some basic elements
- */
- body, h1, h2, h3, h4, h5, h6,
- p, blockquote, pre, hr,
- dl, dd, ol, ul, figure {
-     margin: 0;
-     padding: 0;
- }
- 
- 
- 
- /** Variables **********************************************/
- $base-font-family:              Helvetica, sans-serif;
- $base-line-height:              1.5em;
- $horizontal-spacing-unit:       50px;
- $vertical-spacing-unit:         40px;
- $nav-height:                    56px;
- 
- /* portfolio tinkering */
- $img_spacing: 5px; 
- $img_height: 275px;
- $caption_font_size: 12px;
- $caption_color: #aaa;
- 
- /* COLORS  */
- $red:  #CC3636;
- $orange: #F29105;
- $blue: #2698BA;
- $green: #11D68B;
- $lime_green: #B7D12A;
- $purple: #B509AC;
- 
- 
- $grey-color-dark: #333;   /* footer */
- $grey-color-light: #ddd;  /* navigation bar border */
- $text-color:     #666;
- 
- /* Set theme color *************************/
- $theme-color:   $red;
- 
- 
- /************************************************************/
- 
- /**
-  * Basic styling
-  */
- body {
-     font-family: $base-font-family;
-     font-size: $base-font-size;
-     line-height: $base-line-height;
-     font-weight: 100;
-     color: $text-color;
-     background-color: $background-color;
-     -webkit-text-size-adjust: 100%;
- }
- 
- 
- 
- /**
-  * Set `margin-bottom` to maintain vertical rhythm
-  */
- p, blockquote, pre,
- ul, ol, dl, figure,
- %vertical-rhythm {
-     margin-top: $vertical-spacing-unit / 4;
-     margin-bottom: $vertical-spacing-unit / 2;
- }
- 
- .alignright {
-     float: right;
- }
- 
- 
- hr{
-     /* Inset, by Dan Eden */
-     border: 0;
-     height: 0;
-     border-top: 1px solid rgba(0, 0, 0, 0.1);
-     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
- 
- }
- 
- 
- /**
-  * Figures
-  */
- figure > img {
-     display: block;
- }
- 
- figcaption {
-     font-size: $small-font-size;
- }
- 
- 
- 
- /**
-  * Lists
-  */
- ul, ol {
-     margin-left: $horizontal-spacing-unit;
- }
- 
- li {
-     > ul,
-     > ol {
-          margin-bottom: 0;
-     }
- }
- 
- 
- 
- /**
-  * Headings
-  */
- h1, h2, h3, h4, h5, h6 {
-     font-weight: 100;
- }
- 
- 
- /**
-  * Links
-  */
- a {
-     color: $text-color;
-     text-decoration: none;
-    //  /*
-    //  &:visited {
-    //      color: darken($brand-color, 15%); 
-    //  }
-    //  */
-     &:hover {
-         color: $theme-color;
-         text-decoration: none;
-     }
- }
- 
- article a {
-     color: $theme-color;
-     font-weight: 100;
- 
-     &:hover {
-         text-decoration: none;
-     }
- }
- 
- 
- 
- /**
-  * Blockquotes
-  */
- blockquote {
-     color: $text-color;
-     border-left: 10px solid $grey-color-light;
-     padding-left: $horizontal-spacing-unit / 2;
-     font-size: 18px;
-     font-style: italic;
- 
-     > :last-child {
-         margin-bottom: 0;
-     }
- }
- 
- 
- 
- /**
-  * Code formatting
-  */
- pre,
- code {
-     font-size: 15px;
-     border-radius: 3px;
- }
- 
- code {
-     padding: 1px 5px;
- }
- 
- pre {
-     padding: 8px 12px;
-     overflow-x: scroll;
- 
-     > code {
-         border: 0;
-         padding-right: 0;
-         padding-left: 0;
-     }
- }
- 
- 
- 
- /**
-  * Wrapper
-  */ 
- 
- .wrapper {
-     max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit} * 2));
-     max-width:         calc(800px - (#{$horizontal-spacing-unit} * 2));
-     margin-right: auto;
-     margin-left: auto;
-     padding-right: $horizontal-spacing-unit;
-     padding-left: $horizontal-spacing-unit;
-     @extend %clearfix;
- 
-     @include media-query($on-laptop) {
-         max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit}));
-         max-width:         calc(800px - (#{$horizontal-spacing-unit}));
-         padding-right: $spacing-unit / 2;
-         padding-left: $spacing-unit / 2;
-     }
- }
- 
- 
- /**
-  * Clearfix
-  */
- %clearfix {
-     &:before,
-     &:after {
-         content: "";
-         display: table;
-         clear: both;
-     }
- }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+hr,
+dl,
+dd,
+ol,
+ul,
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: $base-font-family;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
+    font-weight: 100;
+    color: $text-color;
+    background-color: $background-color;
+    -webkit-text-size-adjust: 100%;
+}
+
+p,
+blockquote,
+pre,
+ul,
+ol,
+dl,
+figure,
+%vertical-rhythm {
+    margin-top: $vertical-spacing-unit / 4;
+    margin-bottom: $vertical-spacing-unit / 2;
+}
+
+figure>img {
+    display: block;
+}
+
+figcaption {
+    font-size: $small-font-size;
+}
+
+
+ul,
+ol {
+    margin-left: $horizontal-spacing-unit;
+}
+
+li {
+
+    >ul,
+    >ol {
+        margin-bottom: 0;
+    }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 100;
+}
+
+
+a {
+    color: $text-color;
+    text-decoration: none;
+
+    &:hover {
+        color: $theme-color;
+        text-decoration: none;
+    }
+}
+
+article a {
+    color: $theme-color;
+    font-weight: 100;
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+blockquote {
+    color: $text-color;
+    border-left: 10px solid $grey-color-light;
+    padding-left: $horizontal-spacing-unit / 2;
+    font-size: 18px;
+    font-style: italic;
+
+    > :last-child {
+        margin-bottom: 0;
+    }
+}
+
+pre,
+code {
+    font-size: 15px;
+    border-radius: 3px;
+}
+
+code {
+    padding: 1px 5px;
+}
+
+pre {
+    padding: 8px 12px;
+    overflow-x: scroll;
+
+    >code {
+        border: 0;
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
+.site-header {
+    border-bottom: 1px solid $grey-color-light;
+    background-color: #fff;
+    opacity: 0.75;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    height: 56px;
+    width: 100%;
+    z-index: 50;
+}
+
+hr {
+    /* Inset, by Dan Eden */
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+
+}
+
+
+.site-title {
+    font-size: 20px;
+    line-height: $nav-height;
+    letter-spacing: -1px;
+    margin-bottom: 0;
+
+    &:hover {
+        text-decoration: none;
+        color: $theme-color;
+    }
+}
+
+.title-nav {
+    float: left;
+    line-height: $nav-height;
+
+    .page-link-title {
+        line-height: $base-line-height;
+
+        // Gaps between nav items, but not on the first one
+        &:not(:first-child) {
+            margin-left: 10px;
+        }
+
+        color: $theme-color;
+    }
+}
+
+.site-nav {
+    float: right;
+    line-height: $nav-height;
+
+    .page-link {
+        line-height: $base-line-height;
+
+        // Gaps between nav items, but not on the first one
+        &:not(:first-child) {
+            margin-left: 10px;
+        }
+    }
+}
+
+.header-bar {
+    left: 0px;
+    top: 0px;
+    position: relative;
+    font-size: 20px;
+    display: block;
+    opacity: 0.75;
+    width: 100%;
+    text-align: center;
+    padding-top: 25px;
+    z-index: 25;
+
+    h1 {
+        color: $theme-color;
+        font-size: 75px;
+        line-height: 1em;
+    }
+
+    h2 {
+        font-size: 25px;
+        line-height: 1em;
+    }
+}
+
+.site-footer {
+    border-top: 1px solid $grey-color-dark;
+    font-size: 10px;
+    background-color: $grey-color-dark;
+    padding: 2px;
+    color: #aaa;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+}
+
+.site-footer p {
+    margin-bottom: 0;
+}
+
+.prev {
+    float: left;
+}
+
+.next {
+    float: right;
+}
+
+.page-content {
+    padding: 100px 0;
+}
+
+.page-heading {
+    font-size: 20px;
+}
+
+.post-list {
+    margin: 0px 0;
+    list-style: none;
+
+    >li {
+        margin-bottom: $vertical-spacing-unit;
+    }
+}
+
+.contacticon {
+    display: table;
+    margin: auto;
+
+    svg {
+        width: 60px;
+        display: block;
+        float: left;
+        padding-left: 5px;
+        padding-right: 5px;
+        fill: $theme-color;
+    }
+
+}
+
+.center {
+    text-align: center;
+}
+
+.post-header {
+    margin-bottom: $vertical-spacing-unit;
+}
+
+.post-title {
+    font-size: 42px;
+    letter-spacing: -1px;
+    line-height: 1em;
+}
+
+.post-content {
+    a {
+        color: $theme-color;
+        font-weight: 100;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
+    h1 {
+        font-size: 42px;
+        line-height: 1em;
+    }
+
+    h2 {
+        font-size: 36px;
+        line-height: 1em;
+    }
+
+    h3 {
+        font-size: 30px;
+        line-height: 1em;
+    }
+
+    h4 {
+        font-size: 20px;
+        line-height: 1em;
+    }
+
+    h5 {
+        font-size: 18px;
+        line-height: 1em;
+    }
+
+    h6 {
+        font-size: 16px;
+        line-height: 1em;
+    }
+
+    img {
+        max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.post-meta {
+    font-size: $small-font-size;
+    color: $grey-color;
+    margin-bottom: 0px;
+}
+
+.post-link {
+    display: block;
+    font-size: 42px;
+}
+
+.post-tags {
+    a {
+        color: $theme-color;
+        font-weight: 100;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+.project {
+    width: 33.33%;
+    height: 180px;
+    float: left;
+    vertical-align: middle;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.thumbnail {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thumbnail img {
+    width: 100%;
+    position: relative;
+    object-fit: cover;
+}
+
+.thumbnail a {
+    float: left;
+    position: relative;
+    width: 100%;
+}
+
+.thumbnail a span {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.4);
+    color: $grey-color-light;
+    padding: 40px;
+    text-align: center;
+}
+
+.thumbnail a:hover span {
+    display: block;
+}
+
+.blankbox {
+    background: $theme-color;
+}
+
+.img_row {
+    height: $img_height;
+    width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: $img_spacing;
+}
+
+.col {
+    width: 100%;
+    height: 100%;
+    float: left;
+    object-fit: cover;
+    box-sizing: border-box;
+    padding: $img_spacing;
+}
+
+.right {
+    float: right;
+}
+
+.one {
+    width: 33.33%;
+}
+
+.two {
+    width: 66.66%;
+}
+
+.three {
+    width: 100%;
+}
+
+.caption {
+    height: 100%;
+    color: $grey-color;
+    text-align: center;
+    vertical-align: middle;
+    font-size: $caption_font_size;
+}
+
+.alignright {
+    float: right;
+}
+
+.wrapper {
+    max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit} * 2));
+    max-width: calc(800px - (#{$horizontal-spacing-unit} * 2));
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: $horizontal-spacing-unit;
+    padding-left: $horizontal-spacing-unit;
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit}));
+        max-width: calc(800px - (#{$horizontal-spacing-unit}));
+        padding-right: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+}
