Shorten footer message

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
 
     <div class="wrapper">
       {%- if config.extra.author %}
-      <span>© {{ now() | date(format="%Y") }} {{ config.extra.author }}. This site was built using <a
+      <span>© {{ now() | date(format="%Y") }} {{ config.extra.author }}. This site uses <a
           href="https://www.getzola.org/">Zola</a> and the <a href="https://github.com/evjrob/zola-folio"
-          target="_blank">zola-folio theme</a>.</span>
+          target="_blank">zola-folio</a> theme.</span>
       {% endif -%}
     </div>
 
