--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -130,7 +130,7 @@ pre {
     position: fixed;
     left: 0px;
     top: 0px;
-    min-height: 56px;
+    min-height: $nav-height;
     width: 100%;
     z-index: 50;
 }
@@ -191,10 +191,14 @@ hr {
         padding-left: 20px;
         padding-bottom: 2px;
         border-radius: 2px;
-        width: 72px;
+        width: 100px;
         background: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%20-960%20960%20960%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M784-120%20532-372q-30%2024-69%2038t-83%2014q-109%200-184.5-75.5T120-580q0-109%2075.5-184.5T380-840q109%200%20184.5%2075.5T640-580q0%2044-14%2083t-38%2069l252%20252-56%2056ZM380-400q75%200%20127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75%200-127.5%2052.5T200-580q0%2075%2052.5%20127.5T380-400Z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E") center / contain no-repeat;
         background-position: left;
         outline: none; border:none; border-bottom: 1px solid $grey-color;
+
+        @include media-query($on-palm) {
+            width: 45px;
+        }
     }
     .search:focus {
         outline: none; border:none; border-bottom: 1px solid $theme-color;
@@ -406,6 +410,10 @@ hr {
     vertical-align: middle;
     box-sizing: border-box;
     padding: 10px;
+
+    @include media-query($on-palm) {
+        width: 100%;
+    }
 }
 
 .thumbnail {
@@ -436,10 +444,12 @@ hr {
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.7);
     color: $grey-color-light;
-    padding: 40px;
+    padding: 20px;
     text-align: center;
+    justify-content: center;
+    align-content: center;
 }
 
 .thumbnail a:hover span {
@@ -453,7 +463,6 @@ hr {
 .img_row {
     height: $img_height;
     width: 100%;
-    overflow: hidden;
     box-sizing: border-box;
     padding: $img_spacing;
 }
@@ -473,10 +482,18 @@ hr {
 
 .one {
     width: 33.33%;
+
+    @include media-query($on-palm) {
+        width: 100%;
+    }
 }
 
 .two {
     width: 66.66%;
+
+    @include media-query($on-palm) {
+        width: 100%;
+    }
 }
 
 .three {
@@ -502,6 +519,8 @@ hr {
     margin-left: auto;
     padding-right: $horizontal-spacing-unit;
     padding-left: $horizontal-spacing-unit;
+    overflow-y: auto;
+    padding-bottom: 10px;
 
     @include media-query($on-laptop) {
         max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit}));
