--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -270,6 +270,16 @@ hr {
     bottom: 0px;
     width: 100%;
 
+    .wrapper {
+        padding-bottom: 0px;
+    }
+    
+    span {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
     a {
         color: var(--theme-color-light);
     }
