--- a/sass/color/red.scss
+++ b/sass/color/red.scss
@@ -1,4 +1,4 @@
 :root {
-    --theme-color: #CC3636;
-    --theme-color-light: #e76b6b;
+    --theme-color: #cc3636;
+    --theme-color-light: #ff8888;
 }
