No underscores in CSS and improve some class names

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -475,15 +475,15 @@ hr {
     background: var(--theme-color);
 }
 
-.img_row {
+.row {
     display: inline-table;
-    height: $img_height;
+    height: $img-height;
     width: 100%;
     box-sizing: border-box;
-    padding: $img_spacing;
+    padding: $img-spacing;
 
     img {
-        height: $img_height;
+        height: $img-height;
     }
 }
 
@@ -493,14 +493,14 @@ hr {
     float: left;
     object-fit: cover;
     box-sizing: border-box;
-    padding: $img_spacing;
+    padding: $img-spacing;
 }
 
 .right {
     float: right;
 }
 
-.one {
+.one-third-width {
     width: 33.33%;
 
     @include media-query($on-palm) {
@@ -508,7 +508,15 @@ hr {
     }
 }
 
-.two {
+.half-width {
+    width: 50%;
+
+    @include media-query($on-palm) {
+        width: 100%;
+    }
+}
+
+.two-thirds-width {
     width: 66.66%;
 
     @include media-query($on-palm) {
@@ -516,7 +524,7 @@ hr {
     }
 }
 
-.three {
+.full-width {
     width: 100%;
 }
 
@@ -525,7 +533,7 @@ hr {
     color: $grey-color;
     text-align: center;
     vertical-align: middle;
-    font-size: $caption_font_size;
+    font-size: $caption-font-size;
 }
 
 .alignright {
