--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -15,9 +15,9 @@ $base-line-height: 1.5em;
 $horizontal-spacing-unit: 50px;
 $vertical-spacing-unit: 40px;
 $nav-height: 56px;
-$img_spacing: 5px;
-$img_height: 275px;
-$caption_font_size: 12px;
+$img-spacing: 5px;
+$img-height: 275px;
+$caption-font-size: 12px;
 
 $background-color: #fdfdfd;
 $grey-color-dark:  #333;
