Fix caption line height

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -534,6 +534,7 @@ hr {
     text-align: center;
     vertical-align: middle;
     font-size: $caption-font-size;
+    line-height: 1.5em;
 }
 
 .alignright {
